feat: RAG chat
