# app/domains/services/rag/chat.controller.js
@@ -1,0 +1,139 @@
+const Service = require('../entities/services.model').Service;
+
+const create = async (req, res) => {
+    try {
+        const { query } = req.body;
+
+        if (!query) {
+            return res.status(400).json({
+                status: 'error',
+                message: 'Parameter "query" required',
+                data: {}
+            });
+        }
+
+        const getService = await Service.findOne({ email: req.user.email });
+        if (!getService) {
+            return res.status(400).json({
+                status: 'error',
+                message: "User is not registered yet",
+                data: {}
+            });
+        }
+
+        const requestBody = {
+            query: query
+        };
+
+        const response = await fetch(process.env.SIMUTRADE_AI_HOST + "/query", {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(requestBody),
+        });
+
+        if (!response.ok) {
+            const errorData = await response.json();
+            console.error(errorData);
+            return res.status(400).json({
+                status: 'error',
+                message: process.env.DEBUG ? errorData.error.message : "Failed to process request",
+                data: errorData.error
+            });
+        }
+
+        let data = await response.json();
+        getService.chatData.push(data);
+        const chatId = await getService.save();
+
+        data["_id"] = chatId.chatData.slice(-1)[0]._id;
+
+        return res.status(200).json({
+            status: 'success',
+            message: "Successfuly create user chat",
+            data: data
+        });
+    } catch(err) {
+        console.error(err);
+        return res.status(400).json({
+            status: 'error',
+            message: process.env.DEBUG ? err.message : "Bad Request",
+            data: {}
+        });
+    }
+};
+
+const read = async (req, res) => {
+    try {
+        const getService = await Service.findOne({ email: req.user.email });
+        if (!getService) {
+            return res.status(400).json({
+                status: 'error',
+                message: "User is not registered yet",
+                data: {}
+            });
+        }
+
+        res.status(200).json({
+            status: "success",
+            message: "Successfuly read all user chat",
+            data: {
+                chatData: getService.chatData
+            }
+        });
+    } catch(err) {
+        console.error(err);
+        return res.status(400).json({
+            status: 'error',
+            message: process.env.DEBUG ? err.message : "Bad Request",
+            data: {}
+        });
+    }
+};
+
+const readbyID = async (req, res) => {
+    try {
+        const { id } = req.params;
+        if (!id) {
+            return res.status(400).json({
+                status: 'error',
+                message: 'Parameter "chatId" required',
+                data: {}
+            });
+        }
+
+        const chatData = await Service.findOne(
+            { email: req.user.email, "chatData._id": id },
+            { "chatData.$": 1 }
+        );
+        if (!chatData) {
+            return res.status(400).json({
+                status: 'error',
+                message: 'Invalid chatId: chatId not found',
+                data: {}
+            });
+        }
+
+        let chatSession = chatData["chatData"][0].toObject();
+
+        res.status(200).json({
+            status: "success",
+            message: "Successfuly read user chat by ID",
+            data: chatSession
+        });
+    } catch(err) {
+        console.error(err);
+        return res.status(400).json({
+            status: 'error',
+            message: process.env.DEBUG ? err.message : "Bad Request",
+            data: {}
+        });
+    }
+};
+
+module.exports = {
+    create,
+    read,
+    readbyID
+};
